# markdown2gdoc

./: README.md  pyproject.toml
markdown2gdoc/: __init__.py  batch_requests.py  indentation.py  parse.py  schemas.py  styles.py  update_requests.py
