[project]
name = "markdown2gdoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "marko>=2.1.3",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.11.10",
]
